# Zhele

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md  library.json
.github/workflows/: build_examples.yml
Zhele/include/: adc.h  binary_stream.h  clock.h  dac.h  delay.h  dma.h  exti.h  flash.h  i2c.h  iopin.h  iopins.h  ioports.h  pinlist.h  spi.h  timer.h  usart.h  usb.h  watchdog.h
Zhele/include/common/: adc.h  clock.h  dac.h  dma.h  exti.h  i2c.h  iopin.h  iopins.h  ioports.h  ioreg.h  one_wire.h  pinlist.h  spi.h  timer.h  usart.h  watchdog.h
Zhele/include/containers/: ring_buffer.h
Zhele/include/drivers/: adm485.h  aht10.h  bmp280.h  ds1307.h  ds18b20.h  encoder.h  fonts.h  hd44780.h  nrf24l.h  rc522.h  sdcard.h  ssd1306.h  st7735.h  st77xx.h
Zhele/include/f0/: clock.h  delay.h  dma.h  exti.h  flash.h  i2c.h  iopins.h  ioports.h  spi.h  timer.h  usart.h  usb.h
Zhele/include/f1/: clock.h  delay.h  dma.h  exti.h  flash.h  i2c.h  iopin.h  iopins.h  ioports.h  pinlist.h  remap.h  spi.h  timer.h  usart.h  usb.h
Zhele/include/f4/: afio_bind.h  clock.h  delay.h  dma.h  flash.h  i2c.h  ioports.h  spi.h  timer.h  usart.h  usb.h
Zhele/include/impl/: binary_stream.h
Zhele/include/l4/: afio_bind.h  clock.h  (+7 more)
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
example/: AdcRegularExample.cpp  AdcWithCdcExample.cpp  CMakeLists.txt  CdcExample_f1.cpp  ConfigureClock_F4.cpp  DacNoiseExample.cpp  DacTriangleExample.cpp  IrNecExample.cpp  Lcd1602.cpp  Lcd1602I2cExample.cpp  LedControl.cpp  MscExample_f4.cpp  PinListReadExample.cpp  PwmExample.cpp  SdCardFatFsExample.cpp  SpiExample.cpp  TimerBasedDelay.cpp  UsartDmaExample.cpp  UsbExample_f4_Led.cpp  WatchdogExample.cpp  ds1307Example.cpp  ds18b20Example.cpp  nrf24lReceiverExample.cpp
example/Adc/: CMakeLists.txt
example/Adc/AdcInjectedCdc/: CMakeLists.txt  main.cpp
example/Adc/AdcRegularCdc/: CMakeLists.txt  main.cpp
example/Clock/: CMakeLists.txt
example/Clock/PllConfigure/: CMakeLists.txt  main.cpp
example/Crc/: CMakeLists.txt  main.cpp
example/Dac/: CMakeLists.txt
example/Dac/Common/: CMakeLists.txt  main.cpp
example/Dac/NoiseGen/: CMakeLists.txt  main.cpp
example/Dac/TriangleGen/: CMakeLists.txt  main.cpp
example/Dma/: CMakeLists.txt
example/Dma/Mem2Mem/: CMakeLists.txt  main.cpp
example/Drivers/: CMakeLists.txt
example/Drivers/Adm485/: CMakeLists.txt  main.cpp
example/Drivers/Aht10/: CMakeLists.txt  main.cpp
example/Drivers/Bmp280/: CMakeLists.txt  main.cpp
example/Drivers/Ds1307/: CMakeLists.txt  main.cpp
example/Drivers/Ds18b20/: CMakeLists.txt  main.cpp
example/Drivers/Hd44780/: CMakeLists.txt  main.cpp
example/Drivers/Hd44780_pcf/: CMakeLists.txt  main.cpp
example/Drivers/IrNec/: CMakeLists.txt  main.cpp
example/Drivers/Nrf24l_rx/: CMakeLists.txt  main.cpp
example/Drivers/Nrf24l_tx/: CMakeLists.txt  main.cpp
example/Drivers/OneWire/: CMakeLists.txt  main.cpp
example/Drivers/Rc522/: CMakeLists.txt  main.cpp
example/Drivers/SdCard/: CMakeLists.txt  main.cpp
example/Drivers/Ssd1306/: CMakeLists.txt  main.cpp
example/Drivers/St7735/: CMakeLists.txt  main.cpp
example/Drivers/tmc2209/: CMakeLists.txt  main.cpp
example/Exti/: CMakeLists.txt  main.cpp
example/Flash/: CMakeLists.txt  main.cpp
example/Gpio/: CMakeLists.txt
example/Gpio/LedControl/: CMakeLists.txt  main.cpp
example/Gpio/PinList/: CMakeLists.txt  main.cpp
example/I2c/: CMakeLists.txt  main.cpp
example/Spi/: CMakeLists.txt  main.cpp
example/Timer/: CMakeLists.txt
example/Timer/Encoder/: CMakeLists.txt  main.cpp
example/Timer/LedBlinking/: CMakeLists.txt  main.cpp
example/Timer/PWM/: CMakeLists.txt
example/Timer/PWM/Common/: CMakeLists.txt  main.cpp
example/Timer/PWM/InputCapture/: CMakeLists.txt  main.cpp
example/Timer/PWM/InputCaptureWithTrgo/: CMakeLists.txt  main.cpp
example/Usart/: CMakeLists.txt
example/Usart/Common/: CMakeLists.txt  main.cpp
example/Usart/ReceiveTimeout/: CMakeLists.txt  main.cpp
example/Usart/UsartDma/: CMakeLists.txt  main.cpp
example/Usb/CDC/BulkDoubleBuffered/: CdcExample_RxBulkDoubleBuffered.cpp
example/Usb/CDC/Common/: CdcExample.cpp  CdcExample_f4.cpp
example/Usb/HID/: UsbLedControlExample.cpp  UsbLedControlExampleWithStrings_f1.cpp
example/Usb/MSC/: CompositeMscAndHid_f4.cpp
example/WatchDog/: CMakeLists.txt  main.cpp
example/niiet/GPIO/Blink/: CMakeLists.txt
example/niiet/GPIO/Blink/src/: main.cpp
example/niiet/GPIO/PinList/: CMakeLists.txt
example/niiet/GPIO/PinList/src/: main.cpp
example/niiet/UART/Echo/: CMakeLists.txt
example/niiet/UART/Echo/src/: main.cpp
example/niiet/UART/EchoDma/: CMakeLists.txt
example/niiet/UART/EchoDma/src/: main.cpp
example/stm32/: CMakeLists.txt
example/stm32/Gpio/LedControl/: CMakeLists.txt
example/stm32/Timer/LedBlinking/: CMakeLists.txt
example/stm32/Timer/PWM/Common/: CMakeLists.txt
example/stm32/Usart/Common/: CMakeLists.txt  main.cpp
example/stm32/Usart/UsartDma/: CMakeLists.txt  main.cpp
examples/: Adm485Example.cpp  Aht10Example.cpp  Bmp280Example.cpp  CdcExampleBulkDoubleBuffered_F1.cpp  CdcExample_RxBulkDoubleBuffered.cpp  ConfigureClock.cpp  DacExample.cpp  DmaExample.cpp  EncoderExample.cpp  ExtiExample.cpp  I2cExample.cpp  LedBlinkingTimer.cpp  LedControl.cpp  MscExampleFakeBigSize_F4.cpp  MscExample_f1.cpp  MscExample_f4.cpp  OneWireExample.cpp  PinListExample.cpp  PwmAndInputCapture.cpp  PwmAndInputCaptureWithTrgo.cpp  Rc522Example.cpp  SdCardFatFsExample.cpp  SpiExample.cpp  Ssd1306Example.cpp  St7735Example.cpp  St7789Example.cpp  UsartDmaExample.cpp  UsartExample.cpp  UsbExample.cpp  UsbLedControlExample.cpp  UsbLedControlExample_f1.cpp  ds1307Example.cpp  nrf24lReceiverExample.cpp  nrf24lTransmitterExample.cpp
include/zhele/: adc.h  binary_stream.h  clock.h  crc.h  dac.h  delay.h  dma.h  dmamux.h  exti.h  flash.h  i2c.h  iopins.h  ioports.h  one_wire.h  pinlist.h  platform_detector.h  rng.h  spi.h  timer.h  usart.h  usb.h  watchdog.h
test/src/: compile_test.cpp
tests/: compile_test.cpp
(+363 files in other folders)
