#add_subdirectory(Adm485) TODO:: Fix Zhele::TransferCallback
add_subdirectory(Aht10)
add_subdirectory(Bmp280)
#add_subdirectory(Ds18b20) TODO:: Fix Zhele::TransferCallback
add_subdirectory(Ds1307)
add_subdirectory(Hd44780)
add_subdirectory(Hd44780_pcf)
add_subdirectory(IrNec)
add_subdirectory(Nrf24l_rx)
add_subdirectory(Nrf24l_tx)
#add_subdirectory(OneWire) TODO:: Fix Zhele::TransferCallback
add_subdirectory(Rc522)
#add_subdirectory(SdCard) TODO:: Use FatFS as submodule
add_subdirectory(Ssd1306)
add_subdirectory(St7735)