# STM32-only examples

stm32_fetch_cmsis(C0 F0 F1 F4 G0)
find_package(CMSIS COMPONENTS STM32C011F6 STM32F0 STM32F1 STM32F4 STM32G0 REQUIRED)

add_subdirectory(Adc)
add_subdirectory(Clock)
add_subdirectory(Crc)
add_subdirectory(Dac)
add_subdirectory(Dma)
add_subdirectory(Drivers)
add_subdirectory(Exti)
add_subdirectory(Flash)
add_subdirectory(Gpio)
add_subdirectory(I2c)
add_subdirectory(Spi)
add_subdirectory(Timer)
add_subdirectory(Usart)
add_subdirectory(Usb)
add_subdirectory(WatchDog)
